--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "start": "node .",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -17,7 +17,7 @@
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
-    "@types/node": "^16.10.1",
+    "@types/node": "^17.0.38",
     "ts-node": "^10.8.0"
   }
 }
