--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "canvas": "^2.9.1",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "mongoose": "^6.0.7"
